# vespaembed

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: quality.yml  release.yml  tests.yml
examples/: README.md  contrastive_example.py  matryoshka_example.py  mnr_example.py  nli_example.py  pairs_example.py  similarity_example.py  sts_example.py  triplet_example.py  triplets_example.py  tsdae_example.py
examples/configs/: README.md  pairs.yaml  pairs_bge_lora.yaml  pairs_gooaq.yaml  pairs_lora.yaml  pairs_matryoshka.yaml  pairs_msmarco.yaml  pairs_nq.yaml  pairs_quora.yaml  pairs_unsloth.yaml  pairs_unsloth_lora.yaml  similarity.yaml  similarity_lora.yaml  similarity_stsb.yaml  similarity_unsloth.yaml  similarity_unsloth_lora.yaml  triplets.yaml  triplets_allnli.yaml  triplets_allnli_lora.yaml  triplets_lora.yaml  triplets_unsloth.yaml  triplets_unsloth_lora.yaml  tsdae.yaml  tsdae_lora.yaml  tsdae_unsloth.yaml  tsdae_unsloth_lora.yaml  tsdae_wikipedia.yaml
examples/data/: contrastive.csv  mnr.csv  nli.csv  similarity.csv  triplet.csv  tsdae.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/form/: AdvancedOptions.tsx  DataSourceTabs.tsx  FileUpload.tsx  HubSettings.tsx  LoraSettings.tsx  MatryoshkaSettings.tsx  TaskSelector.tsx  UnslothSettings.tsx
frontend/src/components/layout/: Footer.tsx  MainContent.tsx  Sidebar.tsx
frontend/src/components/modals/: ArtifactsModal.tsx  NewProjectModal.tsx  WizardStep1.tsx  WizardStep2.tsx
frontend/src/components/monitor/: LogCard.tsx  MetricsChart.tsx  MonitorHeader.tsx  StatusBanner.tsx
frontend/src/components/sidebar/: ProjectSummary.tsx  RunItem.tsx  RunList.tsx
frontend/src/components/ui/: Modal.tsx  StatusChip.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useMetrics.ts  usePolling.ts  useRuns.ts  useTasks.ts
src/vespaembed/: db.py  enums.py  worker.py
src/vespaembed/cli/: __init__.py  vespaembed.py
src/vespaembed/cli/commands/: __init__.py  evaluate.py  export.py  info.py  serve.py  train.py
src/vespaembed/core/: __init__.py  config.py  registry.py  trainer.py
src/vespaembed/datasets/: __init__.py  loader.py
src/vespaembed/datasets/formats/: __init__.py  csv.py  huggingface.py  jsonl.py
src/vespaembed/evaluation/: __init__.py  factory.py
src/vespaembed/models/: __init__.py  export.py  loader.py
src/vespaembed/static/css/: styles.css
src/vespaembed/static/js/: app.js
src/vespaembed/tasks/: __init__.py  base.py  contrastive.py  matryoshka.py  mnr.py  nli.py  pairs.py  similarity.py  sts.py  triplet.py  triplets.py  tsdae.py
src/vespaembed/templates/: index.html
src/vespaembed/utils/: __init__.py  logging.py
src/vespaembed/web/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_datasets.py  test_db.py  test_e2e.py  test_onnx_export.py  test_registry.py  test_trainer.py
unsloth_examples/: all_minilm_l6_v2.py  bge_m3.py  embeddinggemma_(300m).py  modernbert.py  qwen3_embedding_(0_6b).py  qwen3_embedding_(4b).py
