[project]
name = "vespaembed"
version = "0.0.1"
description = "vespaembed: no-code training for embedding models"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache 2.0"}
authors = [
    {name = "Abhishek Thakur"}
]
dependencies = [
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.26.0",
    "torch>=2.0.0",
    "datasets>=2.18.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "tensorboard>=2.15.0",
    "peft>=0.18.1",
    "unsloth>=2026.1.4",
]

[project.optional-dependencies]
unsloth = ["unsloth"]
onnx = ["onnx>=1.14.0", "onnxruntime>=1.23.2"]
dev = [
    "black==26.1.0",
    "isort==7.0.0",
    "flake8==7.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/vespaai-playground/vespaembed"

[project.scripts]
vespaembed = "vespaembed.cli.vespaembed:main"

[build-system]
requires = ["setuptools>=80.10.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vespaembed = ["static/**/*", "templates/**/*"]

[tool.black]
line-length = 119
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.env
  | env
  | build
  | dist
  | unsloth_examples
)/
'''

[tool.isort]
profile = "black"
line_length = 119
skip = ["unsloth_examples"]

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 119
per-file-ignores = { "__init__.py" = ["F401", "E402"] }
exclude = [".git", ".venv", "__pycache__", "dist", "build"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
