[project]
name = "vespaembed"
version = "0.0.6"
description = "vespaembed: no-code training for embedding models"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache 2.0"}
authors = [
    {name = "Abhishek Thakur"}
]
dependencies = [
    "sentence-transformers>=5.5.1",
    # [CANNOT-FIX] CVE-2025-14920, CVE-2026-4372, CVE-2026-5241 in transformers 4.57.6:
    # all three fixes only ship in the transformers 5.x line (CVE-2026-5241 fix first
    # lands in 5.5.0; no 4.x backport exists — 4.57.6 is the last 4.x release), but
    # optimum-onnx (pulled in via optimum[onnxruntime], required by the ONNX model-export
    # feature in src/vespaembed/models/export.py) caps transformers <4.58.0 in its newest
    # release (0.1.0). Bump transformers to >=5.5.0 once optimum-onnx supports 5.x.
    # Last verified: 2026-06-07 by Claude (security-workflow skill).
    "transformers>=4.57.6",
    "accelerate>=1.13.0",
    "torch>=2.10.0",
    "datasets>=4.3.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
    "websockets>=16.0",
    "pyyaml>=6.0.3",
    "peft>=0.19.1",
    "tensorboard>=2.20.0",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "optimum[onnxruntime]>=2.1.0",
]

[project.optional-dependencies]
unsloth = ["unsloth>=2026.5.2"]
dev = [
    "black==26.5.1",
    "isort==7.0.0",
    "flake8==7.3.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[project.urls]
Homepage = "https://github.com/vespaai-playground/vespaembed"

[project.scripts]
vespaembed = "vespaembed.cli.vespaembed:main"

[build-system]
requires = ["setuptools>=80.10.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vespaembed = ["static/**/*"]

[tool.black]
line-length = 119
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.env
  | env
  | build
  | dist
  | unsloth_examples
  | frontend
)/
'''

[tool.isort]
profile = "black"
line_length = 119
skip = [".venv", "venv", ".env", "env", "build", "dist", "unsloth_examples", "frontend"]

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 119
per-file-ignores = { "__init__.py" = ["F401", "E402"] }
exclude = [".git", ".venv", "__pycache__", "dist", "build"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
